--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     </section>
     <section>
         <div class="container mt-2">
-            <div class="owl-carousel owl-theme">
-                <div class="item"> <img src="./img/home/client-1.png" alt="" width="120px"></div>
-                <div class="item"> <img src="./img/home/client-2.png" alt="" width="120px"></div>
-                <div class="item"> <img src="./img/home/client-3.png" alt="" width="120px"></div>
-                <div class="item"><img src="./img/home/client-4.png" alt="" width="120px"></div>
-                <div class="item"><img src="./img/home/client-5.png" alt="" width="120px"></div>
-                <div class="item"><img src="./img/home/client-6.png" alt="" width="120px"></div>
+            <div class="brand_carosel owl-carousel owl-theme">
+                <div class="item"> <img src="./img/home/client-1.png" alt=""></div>
+                <div class="item"> <img src="./img/home/client-2.png" alt="" ></div>
+                <div class="item"> <img src="./img/home/client-3.png" alt="" ></div>
+                <div class="item"><img src="./img/home/client-4.png" alt="" ></div>
+                <div class="item"><img src="./img/home/client-5.png" alt=""></div>
+                <div class="item"><img src="./img/home/client-6.png" alt="" ></div>
             </div>
         </div>
     </section>
@@ -804,6 +804,24 @@
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+
+    <script>   
+       var owl = $('.brand_carosel');
+owl.owlCarousel({
+    items: 4,
+    loop: true,
+    margin: 10,
+    autoplay: true,
+    autoplayTimeout: 2000,
+    autoplayHoverPause: true
+});
+$('.play').on('click', function () {
+    owl.trigger('play.owl.autoplay', [1000])
+})
+$('.stop').on('click', function () {
+    owl.trigger('stop.owl.autoplay')
+})
+    </script>
 
     <script>   
        var owl = $('.owl-carousel');
