--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
     <section>
         <div class="container mt-2">
-            <div class="brand_carosel owl-carousel owl-theme">
+            <div class="brand_carosel owl-carousel owl-theme brand">
                 <div class="item"> <img src="./img/home/client-1.png" alt=""></div>
                 <div class="item"> <img src="./img/home/client-2.png" alt="" ></div>
                 <div class="item"> <img src="./img/home/client-3.png" alt="" ></div>
