--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
 
     <!-- Trusted by over 10,000 companies page start -->
 
-    <section class="testimonial">
-        <div class="container-fluid mt-5 pt-5  pb-5 company_bg">
+    <section class="testimonial company_bg">
+        <div class="container mt-5 pt-5  pb-5 ">
             <h2>Trusted by over 10,000 companies</h2>
             <div class="owl-carousel owl-theme">
                 <!-- card 1 -->
